201x-xx-xx:
    * create README.md
    * fix search highlighting (hlsearch) in firefox 51


2017-02-01:
    * add option 'newtaburl' to set default URL in new tabs
    * fix loading the tabs module
    * update max version
    * add help for statuslinevisiblity
    * extend Makefile for signing
    * fixes and refactors in hints module
    * showtexthints option
    * delete trailing whitespace
    * cleanup SVG files
    * add ssl by default to statusline
    * fix 'make xpi'
    * fix :jumps
    * fix <P> by initializing nsITransferable before usage
    * remove uriIsPrefix, unsupported


2016-10-05:
    * update and fix css related issues
    * fix some mispellings
    * fix command prompt selection getting cleared
    * remove asciidoc.conf and regressions.js
    * use sanitizer based on version
    * fix shift-insert on linux
    * honor hlsearch on n/N
    * fix typeerror on :abclear
    * fix smart completions on fx 49
    * removed unused css
    * change option from 'previouspattern' to 'prevpattern'. The old 'previouspattern' still works.
    * canonicalize commandline history during matching
    * fix alphabetic ordering of some doc items and add :dialog items
    * add autocompletion for about:* urls
    * fix `[[` with "preview" buttons


2016-06-07:
    * @gkatsev removed usage of FUEL Application variable
    * @gineadai deleted deprecated template code
    * changed bracket notation to dotnotation in a lot of places
    * @gkatsev removed unnecessary iterator loop in history.get
    * removed unnecessary semicolons
    * @Quicksaver updated tabgroups with some notes and updates for Tab Groups 2 support

2016-05-04:
    * @sirzerator fixed a typoeerror triggered in completion.js
    * @gineadai fixed a highlight typo

2016-04-28:
    * @reepush changed all array and generator comprehensions to iterators and standards compliant javascript thus making vimeprator work with firefox 46
    * @amlitzer made iabbr work in contenteditable text boxes